<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.ignice</groupId>
    <artifactId>c17n</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <!-- main class -->
        <exec.mainClass>io.ignice.c17n.ApplicationLauncher</exec.mainClass>

        <!-- encoding -->
        <project.encoding>UTF-8</project.encoding>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>

        <!-- language level -->
        <java.version>16</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>

        <!-- dependency versions -->
        <junit.version>5.7.0</junit.version>
        <lombok.version>1.18.20</lombok.version>
        <spring.version>5.3.8</spring.version>
        <logback.version>1.2.3</logback.version>
        <slf4j.version>1.7.25</slf4j.version>
        <discord4j.version>3.1.5</discord4j.version>
        <enforcer.version>3.0.0-M3</enforcer.version>
        <r2dbc.version>1.3.3</r2dbc.version>
        <r2dbc-postgresql.version>0.8.8.RELEASE</r2dbc-postgresql.version>

        <!-- plugin versions -->
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
    </properties>

    <developers>
        <developer>
            <id>ignice</id>
            <name>Ignice</name>
            <email>ignice.io@gmail.com</email>
        </developer>
    </developers>

    <dependencyManagement>
        <dependencies>
            <!-- junit bom -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- discord4j -->
            <dependency>
                <groupId>com.discord4j</groupId>
                <artifactId>bom</artifactId>
                <version>${discord4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- r2dbc -->
            <dependency>
                <groupId>io.r2dbc</groupId>
                <artifactId>r2dbc-bom</artifactId>
                <version>Arabba-SR10</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- discord4j -->
        <dependency>
            <groupId>com.discord4j</groupId>
            <artifactId>discord4j-core</artifactId>
            <version>${discord4j.version}</version>
        </dependency>
        <!-- spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
            <!-- EXCLUDED: using logback instead -->
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-r2dbc</artifactId>
            <version>${r2dbc.version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.r2dbc</groupId>-->
<!--            <artifactId>r2dbc-postgresql</artifactId>-->
<!--            <version>LATEST</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.r2dbc</groupId>-->
<!--            <artifactId>r2dbc-postgresql</artifactId>-->
<!--            <version>${r2dbc-postgresql.version}</version>-->
<!--            <exclusions>-->
<!--                <exclusion>-->
<!--                    <groupId>org.slf4j</groupId>-->
<!--                    <artifactId>slf4j-api</artifactId>-->
<!--                </exclusion>-->
<!--&lt;!&ndash;                <exclusion>&ndash;&gt;-->
<!--&lt;!&ndash;                    <groupId>io.projectreactor</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;                    <artifactId>reactor-core</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;                </exclusion>&ndash;&gt;-->
<!--            </exclusions>-->
<!--        </dependency>-->
        <dependency>
            <groupId>io.r2dbc</groupId>
            <artifactId>r2dbc-h2</artifactId>
        </dependency>

        <!-- slf4j (api) + logback (impl) -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- junit (test scope) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <!-- enables property substitution into resources -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <!-- throw error if any conflicts are found between dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${enforcer.version}</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <requireSameVersions>

                                </requireSameVersions>
                                <requireUpperBoundDeps/>
                                <banDuplicatePomDependencyVersions/>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- clean plugin (lifecycle stage: CLEAN) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
            </plugin>

            <!-- resources plugin (for substituting maven properties into resource files) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <configuration>
                    <delimiters>
                        <delimiter>@</delimiter>
                    </delimiters>
                    <useDefaultDelimiters>false</useDefaultDelimiters>
                </configuration>
            </plugin>

            <!-- compiler plugin (lifecycle stage: COMPILE) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>--enable-preview</compilerArgs> <!-- todo rm, playing with sealed types -->
                    <compilerArgs>-XX:+UnlockExperimentalVMOptions</compilerArgs> <!-- todo rm, playing with sealed types -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- surefire plugin (lifecycle stage: TEST) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>

            <!-- exec plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>